--- a/packages/frontend/editor-ui/src/n8n-theme.scss
+++ b/packages/frontend/editor-ui/src/n8n-theme.scss
@@ -5,7 +5,7 @@
 :root {
 	// Using native css variable enables us to use this value in JS
 	--header--height: 65;
-	--content-container-width: 1280px;
+	--content-container--width: 1280px;
 	--banner--height: 48px;
 }
 
@@ -176,7 +176,7 @@
 .el-notification {
 	border-radius: 4px;
 	border: none;
-	margin-bottom: var(--toast-bottom-offset, 0);
+	margin-bottom: var(--toast--margin-bottom, 0);
 
 	&.whats-new-notification {
 		bottom: var(--spacing--xs) !important;
