--- a/packages/frontend/editor-ui/src/n8n-theme.scss
+++ b/packages/frontend/editor-ui/src/n8n-theme.scss
@@ -176,7 +176,7 @@
 .el-notification {
 	border-radius: 4px;
 	border: none;
-	margin-bottom: var(--toast--margin-bottom, 0);
+	margin-bottom: var(--toast--offset, 0);
 
 	&.whats-new-notification {
 		bottom: var(--spacing--xs) !important;
